[FIX] sap.ui.unified.Calendar: Month/Year/Year Range pickers visual improvements (SFSF)
In calendars with a secondaryCalendarType set, the button text in the month picker will sometimes be cut off. Now whenever there is a secondary calendar set, the month picker will only render buttons in 2 columns to properly fit the text.

With this change we are also aligning the heights for month, year, and year-range pickers to match the regular calendar height, and centering their contents.

Visual tests already cover changes in Calendar, so there is no need
of additional tests.

JIRA: BGSOFUIBALKAN-8064
SNOW: n/a
CR-Id: 002075125900002306642024
(cherry picked from commit 567c7293afdbd315370818ee5b531bacfd92a85f)

--- a/src/sap.ui.unified/src/sap/ui/unified/themes/base/Calendar.less
+++ b/src/sap.ui.unified/src/sap/ui/unified/themes/base/Calendar.less
@@ -190,11 +190,17 @@ html.sap-desktop .sapUiCalHead > button.sapUiCalDsbl:focus,
 	white-space: nowrap;
 }
 
-.sapUiCalMonthView,
-.sapUiCalMonthPicker,
-.sapUiCalYearPicker {
+.sapUiCalMonthView {
 	display: inline-block;
 	width: 19rem; /* +1rem padding left and right = 320 px*/
+}
+
+.sapUiCalMonthPicker,
+.sapUiCalYearPicker {
+	width: 19rem; /* +1rem padding left and right = 320 px*/
+	display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .sapUiCalMonthView,
@@ -355,7 +361,7 @@ html.sap-desktop .sapUiCalHead > button.sapUiCalDsbl:focus,
 .sapUiCalContent {
 	position: relative;
 	text-align: center;
-	min-height: 17rem;
+	min-height: 20.25rem;
 }
 
 .sapUiCalInt .sapUiCalContent {
@@ -620,7 +626,7 @@ html.sapUiMedia-Std-Phone .sapUiCalHeadB0{
 .sapUiCalContent > .sapUiCalMonthPicker,
 .sapUiCalContent > .sapUiCalYearPicker{
 	top: 0;
-	padding: 2rem 0 1rem 0;
+	padding: 1rem 0 1rem 0;
 	background-color: @sapUiListBackground;
 }
 
@@ -807,7 +813,7 @@ html.sapUiMedia-Std-Phone .sapUiCalHeadB0{
 .sapUiSizeCompact .sapUiCalMonthView,
 .sapUiSizeCompact .sapUiCalMonthPicker,
 .sapUiSizeCompact .sapUiCalYearPicker{
-	width: 16rem;
+	width: auto;
 }
 
 .sapUiSizeCompact .sapUiCal .sapUiCalMonthView,
@@ -879,7 +885,7 @@ html.sapUiMedia-Std-Phone .sapUiCalHeadB0{
 .sapUiSizeCompact .sapUiCalContent > .sapUiCalMonthPicker,
 .sapUiSizeCompact .sapUiCalContent > .sapUiCalYearPicker{
 	top: 0;
-	padding: 2rem 0.25rem 0.5rem 0.25rem;
+	padding: 0.25rem 0.25rem 0.25rem 0.25rem;
 }
 
 .sapUiSizeCompact .sapUiCalTimeInt > .sapUiCalContent > .sapUiCalDatesRow{
@@ -904,6 +910,7 @@ html.sapUiMedia-Std-Phone .sapUiCalHeadB0{
 	top: 1.5rem;
 	padding: 0.5rem;
 	margin-left: -8.5rem;
+	width: 16rem;
 }
 
 /* Day names inside day */
@@ -962,8 +969,14 @@ html.sapUiMedia-Std-Phone .sapUiCalHeadB0{
 	height: 2rem;
 }
 
-.sapUiSizeCompact .sapUiCal:not(.sapUiCalInt) .sapUiCalContent {
-	min-height: 13rem;
+.sapUiSizeCompact .sapUiCal:not(.sapUiCalInt) {
+	.sapUiCalContent {
+		min-height: 14.5rem;
+	}
+
+	&.sapUiCalSecType .sapUiCalContent {
+		min-height: 16rem;
+	}
 }
 
 .sapUiSizeCompact .sapUiCalInt .sapUiCalContent {
